--- a/test.ipynb
+++ b/test.ipynb
@@ -66,6 +66,15 @@
     "#print((data>(mean-3*std)) & (data<(mean+3*std)))\n",
     "data=data[(data>(mean-3*std)) & (data<(mean+3*std))]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter"
+   ]
   }
  ],
  "metadata": {
